--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 /.idea/assetWizardSettings.xml
 /.idea/deploymentTargetDropDown.xml
 /.idea/deploymentTargetSelector.xml
+/.idea/deviceManager.xml
 /.idea/misc.xml
 /.idea/migrations.xml
 /.idea/modules.xml
