--- a/app/build.gradle
+++ b/app/build.gradle
@@ -272,9 +272,12 @@ dependencies {
     implementation("androidx.activity:activity-ktx:${androidxActivityVersion}")
     implementation("androidx.annotation:annotation:${androidxAnnotationVersion}")
     implementation("androidx.appcompat:appcompat:${androidxAppcompatVersion}")
+    implementation("androidx.camera:camera-camera2:${androidxCameraxVersion}")
+    implementation("androidx.camera:camera-core:${androidxCameraxVersion}")
+    implementation("androidx.camera:camera-lifecycle:${androidxCameraxVersion}")
+    implementation("androidx.camera:camera-view:${androidxCameraxVersion}")
     implementation("androidx.cardview:cardview:${androidxCardviewVersion}")
     implementation("androidx.collection:collection:${androidxCollectionVersion}")
-    // core is only needed for custom constraint helpers
     implementation("androidx.constraintlayout:constraintlayout-core:${androidxConstraintlayoutCoreVersion}")
     implementation("androidx.constraintlayout:constraintlayout:${androidxConstraintlayoutVersion}")
     implementation("androidx.coordinatorlayout:coordinatorlayout:${androidxCoordinatorlayoutVersion}")
@@ -285,13 +288,10 @@ dependencies {
     implementation("androidx.drawerlayout:drawerlayout:${androidxDrawerlayoutVersion}")
     implementation("androidx.exifinterface:exifinterface:${androidxExifinterfaceVersion}")
     implementation("androidx.fragment:fragment-ktx:${androidxFragmentVersion}")
-
-    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:${androidxLifecycleVersion}")
     implementation("androidx.lifecycle:lifecycle-livedata-ktx:${androidxLifecycleVersion}")
-
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:${androidxLifecycleVersion}")
     implementation("androidx.preference:preference-ktx:${androidxPreferenceVersion}")
     implementation("androidx.recyclerview:recyclerview:${androidxRecyclerviewVersion}")
-//    implementation("androidx.slidingpanelayout:slidingpanelayout:${androidxSlidingpanelayoutVersion}")
     implementation("androidx.viewpager2:viewpager2:${androidxViewpager2Version}")
     implementation("androidx.window:window:${androidxWindowVersion}")
 
@@ -308,11 +308,6 @@ dependencies {
 
     implementation "com.google.zxing:core:${zxingCoreVersion}"
 
-    implementation("androidx.camera:camera-core:${androidxCameraxVersion}")
-    implementation("androidx.camera:camera-camera2:${androidxCameraxVersion}")
-    implementation("androidx.camera:camera-lifecycle:${androidxCameraxVersion}")
-    implementation("androidx.camera:camera-view:${androidxCameraxVersion}")
-
     // https://www.acra.ch/docs/Setup/
     implementation("ch.acra:acra-core:${acraVersion}")
     implementation("ch.acra:acra-dialog:${acraVersion}")
@@ -320,18 +315,17 @@ dependencies {
     // See project build.gradle
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:${kotlinxCoroutinesCoreVersion}")
 
-    // local tests use JUnit5
     testImplementation("org.mockito:mockito-core:${mockitoVersion}")
     testImplementation("org.mockito:mockito-junit-jupiter:${mockitoVersion}")
 
-    testImplementation("org.junit.jupiter:junit-jupiter-api:${jupiterVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${jupiterVersion}")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:${jupiterVersion}")
     testImplementation("org.junit.jupiter:junit-jupiter-params:${jupiterVersion}")
 
+    androidTestImplementation("org.junit.jupiter:junit-jupiter-api:${jupiterVersion}")
     androidTestImplementation("de.mannodermaus.junit5:android-test-core:${mannodermausVersion}")
     androidTestRuntimeOnly("de.mannodermaus.junit5:android-test-runner:${mannodermausVersion}")
 
-    // device tests use JUnit4
     androidTestImplementation("androidx.test:core:${androidxTestCoreVersion}")
     androidTestImplementation("androidx.test:runner:${androidxTestRunnerVersion}")
     androidTestImplementation("androidx.test:rules:${androidxTestRulesVersion}")
@@ -339,7 +333,4 @@ dependencies {
     //    @Rule
     //    public TestRule rule = new InstantTaskExecutorRule();
     androidTestImplementation("androidx.arch.core:core-testing:${androidxArchCoreTestingVersion}")
-
-//    testImplementation("org.robolectric:robolectric:4.4")
-//    androidTestImplementation("androidx.test.espresso:espresso-core:3.3.0")
 }
