--- a/build.gradle
+++ b/build.gradle
@@ -19,10 +19,10 @@
  */
 
 plugins {
-    id("com.android.application") version '8.5.2' apply false
-    id("com.android.library") version '8.5.2' apply false
+    id("com.android.application") version '8.6.0-rc01' apply false
+    id("com.android.library") version '8.6.0-rc01' apply false
     // https://plugins.gradle.org/plugin/org.jetbrains.kotlin.android
-    id("org.jetbrains.kotlin.android") version "2.0.0" apply false
+    id("org.jetbrains.kotlin.android") version "2.0.10" apply false
     // https://github.com/mannodermaus/android-junit5
     // Don't forget to update ext.mannodermausVersion
     id("de.mannodermaus.android-junit5") version "1.10.2.0" apply false
