--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@
 /.idea/navEditor.xml
 /.idea/other.xml
 /.idea/render.experimental.xml
+/.idea/runConfigurations.xml
 /.idea/workspace.xml
 
 /app/beta/output-metadata.json
