--- a/build.gradle
+++ b/build.gradle
@@ -19,10 +19,10 @@
  */
 
 plugins {
-    id("com.android.application") version '8.6.0-rc01' apply false
-    id("com.android.library") version '8.6.0-rc01' apply false
+    id("com.android.application") version '8.6.0' apply false
+    id("com.android.library") version '8.6.0' apply false
     // https://plugins.gradle.org/plugin/org.jetbrains.kotlin.android
-    id("org.jetbrains.kotlin.android") version "2.0.10" apply false
+    id("org.jetbrains.kotlin.android") version "2.0.20" apply false
     // https://github.com/mannodermaus/android-junit5
     // Don't forget to update ext.mannodermausVersion
     id("de.mannodermaus.android-junit5") version "1.11.0.0" apply false
@@ -44,7 +44,7 @@ ext {
     compileSdkVersion = 35
 
     // https://github.com/google/desugar_jdk_libs/blob/master/CHANGELOG.md
-    desugarVersion = '2.1.0'
+    desugarVersion = '2.1.1'
 
     // https://developer.android.com/jetpack/androidx/versions
 
@@ -87,7 +87,7 @@ ext {
     acraVersion = '5.11.3'
 
     // https://github.com/mockito/mockito
-    mockitoVersion = '5.12.0'
+    mockitoVersion = '5.13.0'
 
     // https://junit.org/junit5/docs/current/user-guide/#overview
     jupiterVersion = '5.11.0'
